[project]
name = "test-github-actions"
version = "0.1.0"
description = "Test Github Actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "orjson>=3.10.18",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
